yaml-applications/prod/driver-front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-driver-app
  name: web-driver-app
  namespace: plannify-2
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: web-driver-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: web-driver-app
    spec:
      containers:
        - image: ghcr.io/plannify-truck-driver/web-driver-app:0.3.5
          name: web-driver-app
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "50m"
              memory: "128Mi"
          ports:
            - containerPort: 80
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: ghcr-secret
