yaml-applications/prod/driver-front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-driver-app
  namespace: plannify-2
spec:
  type: ClusterIP
  selector:
    app: web-driver-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
